--- a/nginx.conf
+++ b/nginx.conf
@@ -47,9 +47,9 @@ http {
           root   /usr/share/nginx/html;
           try_files $uri /images/placeholder.jpg;
         }
-        location /api/catalogue/ { proxy_pass http://catalougue.dineshkonda.site:8080/; }
-        location /api/user/ { proxy_pass http://user.dineshkonda.site:8080/; }
-        location /api/cart/ { proxy_pass http://cart.dineshkonda.site:8080/; }
+        location /api/catalogue/ { proxy_pass http://localhost:8080/; }
+        location /api/user/ { proxy_pass http://localhost:8080/; }
+        location /api/cart/ { proxy_pass http://localhost:8080/; }
         location /api/shipping/ { proxy_pass http://localhost:8080/; }
         location /api/payment/ { proxy_pass http://localhost:8080/; }
 
